--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,9 +10,11 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 
-#
-# Logging
-#
+## Liquibase
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
+
+## Logging
 logging.level.bank.jusan=DEBUG
 logging.level.bank.atb=TRACE
 logging.level.org.hibernate=OFF
