--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,9 +6,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.data-source-properties.stringtype=unspecified
 spring.jpa.properties.hibernate.generate_statistics=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 ## Liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
