--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 ## Liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
